--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>Hola Mundo</h1>
+<h1>APP COMPONENT</h1>
 
-<app-errorpage></app-errorpage>
+<app-navbar></app-navbar>
+
+<router-outlet></router-outlet>
