--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,4 +1,43 @@
-<h1>Aplicacion de Heroes</h1>
-<hr>
+<mat-sidenav-container fullscreen>
+  <mat-sidenav #sidenav mode="push">
+    <mat-toolbar>
+      <span>Menú</span>
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-toolbar>
+    <mat-nav-list>
 
-<router-outlet></router-outlet>
+
+      <mat-list-item *ngFor="let item of items"
+      [routerLink]="item.path">
+        <mat-icon mat-list-icon>{{item.icon}}</mat-icon>
+        <a 
+        
+        (click)="sidenav.toggle()">
+        <span>{{item.name}}</span>
+        </a>
+      </mat-list-item>
+
+ <!--      <mat-list-item >
+          <mat-icon mat-list-icon>add</mat-icon>
+        <a 
+        routerLink="./add"
+        (click)="sidenav.toggle()">
+        <span>Agregar Heroes</span>
+        </a>
+      </mat-list-item> -->
+
+
+      
+      
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-toolbar>
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </mat-toolbar>
+
+  <router-outlet></router-outlet>
+</mat-sidenav-container>
