--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -1,20 +1,37 @@
 <mat-sidenav-container fullscreen>
   <mat-sidenav #sidenav mode="push">
-      <mat-toolbar>
-          <span>Menú</span>
-        <button mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon>close</mat-icon>
-        </button>
-      </mat-toolbar>
-      <mat-nav-list>
-          <mat-list-item>
-              <a [routerLink]="[ '/list']"><span>Listado de Heroes</span></a>
-          </mat-list-item>
-      </mat-nav-list>
+    <mat-toolbar class="primary">
+      <span>Menú</span>
+      <span class="spacer"></span>
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-toolbar>
+    <mat-nav-list>
+
+
+      <mat-list-item *ngFor="let item of sidenavItems" [routerLink]="item.path">
+        <mat-icon mat-list-icon>{{item.icon}}</mat-icon>
+        <a (click)="sidenav.toggle()">
+          <span>{{item.name}}</span>
+        </a>
+      </mat-list-item>
+    </mat-nav-list>
   </mat-sidenav>
   <mat-toolbar>
     <button mat-icon-button (click)="sidenav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
+    <span>Heroes App</span>
+    <span class="spacer"></span>
+    <button mat-icon-button>
+      <mat-icon>logout</mat-icon>
+    </button>
+    
   </mat-toolbar>
+  
+  <div class="container">
+  
+  <router-outlet></router-outlet>
+   </div>
 </mat-sidenav-container>
