--- a/src/app/heroes/pages/find/find.component.html
+++ b/src/app/heroes/pages/find/find.component.html
@@ -1,1 +1,27 @@
-<p>find works!</p>
+<div fxLayout="column">
+
+  <mat-form-field class="example-full-width">
+    <mat-label>Buscar Heroes</mat-label>
+    <input type="text" 
+        placeholder="" 
+        aria-label="" 
+        matInput
+        [(ngModel)]="termino"
+      [matAutocomplete]="auto"
+
+      (input)="buscando()">
+    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete"
+                    (optionSelected)="opcionSeleccionada( $event )">
+      <mat-option *ngFor="let heroe of heroes" [value]="heroe" >
+        {{heroe.superhero}}
+      </mat-option>
+      <mat-option value="" *ngIf="heroes.length === 0 && termino.trim().length > 0">
+          No se encontro nada con {{termino}}
+      </mat-option>
+    </mat-autocomplete>
+  </mat-form-field>
+
+  <div *ngIf="heroeSeleccionado">
+      <app-heroe-tarjeta [heroe]="heroeSeleccionado"></app-heroe-tarjeta>
+  </div>
+</div>
