--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<mat-grid-list cols="1" style="max-height: 80vh;">
+    <mat-grid-tile>
+        <button mat-raised-button
+                (click)="login()">
+            Ingresar
+        </button>
+    </mat-grid-tile>
+</mat-grid-list>
